# multimodal_chatbot

./: .gitignore  .pre-commit-config.yaml  .~lock.Eval_Hub.ods#  .~lock.Project Cogito.odt#  Dockerfile  Eval_Hub.ods  Makefile  Project Cogito.odt  app.py  main.py  pyproject.toml
LVLMS/: lvlm.py
emedding/: emedding_hub.py
handlers/: base_handler.py  no_speech_detected_handler.py  transcribe_video_handler.py  transcript_available_handler.py  video_processing_handler.py
mm_emeddings/: bridgetower_embeddings.py  openclip_embeddings.py
mm_vector_stores/: multimodal_lancedb.py
models/: data_models.py  lancedb_pydantic_models.py
notebooks/: debug.ipynb  lancedb_debug.ipynb
preprocess/: preprocessor.py  text_preprocessor.py
scrape/: video_scraper.py
services/: audio_downloader.py  speech_to_text_service.py  summarization_service.py  transcript_service.py  video_audio_downloader.py  video_description_service.py  video_downloader.py  youtube_scraper.py
utils/: helpers.py  logger.py
vector_stores/: multimodal_lancedb.py
