[tool.poetry]
name = "multimodal-chatbot"
version = "0.1.0"
description = ""
authors = ["Zalasyu <alec_moldovan@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.0.0"
tqdm = "^4.66.5"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
opencv-python = "^4.10.0.84"
transformers = "^4.45.2"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
numpy = "2.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
datasets = "^3.0.1"
plotly = "^5.24.1"
nbformat = "^5.10.4"
moviepy = "^1.0.3"
webvtt-py = "^0.5.1"
yt-dlp = "^2024.10.7"
loguru = "^0.7.2"
openai-whisper = "^20240930"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
pytest = "^8.3.3"
pre-commit = "^4.0.1"
requests = "^2.32.3"
ipykernel = "^6.29.5"
pycln = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
